<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trip Mate</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Action Bar</string>
    <string name="btn_send_message">Send Message</string>
    
    <!-- Activity titles -->    
    <string name="activity_location_found">Location Found</string>
    
    <!-- Action Bar action items -->
    <string name="action_search">Search</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check for Updates</string>

    <string name="loc_update">Update Location</string>
    <string name="find_us">Find Us</string>
    <string name="about_us">About Us</string>
    <string name="share_this">Share</string>
    <string name="show_me">Show me on Map</string>
    <string name="share_update">Share iT</string>
 
    <!-- Search  -->
    <string name="search_hint">Search color..</string>
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
    <string name="title_activity_list_view">ListView</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_driving_details">DrivingDetailsActivity</string>

    <!-- About Us Details -->
    <string name="about_us_details">© Thawee Prakaipetch</string>
    <string name="about_us_address">Bangkok, Thailand</string>
    <string name="about_us_phonex">+919910215574</string>
    <string name="about_us_web">thaweemail@gmail.com</string>

    <string name="title_activity_about_us">AboutUsActivity</string>

    <string name="title_import">Export</string>
    <string name="title_export">Import</string>
    <string name="action_new_place">New Place</string>

</resources>
