<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Search / will display always -->
    <!--<item-->
    <!--android:id="@+id/action_search"-->
    <!--android:icon="@drawable/ic_action_search"-->
    <!--android:showAsAction="always"-->
    <!--android:title="@string/action_search"/>-->

    <!-- Location Found -->
    <!--<item-->
    <!--android:id="@+id/action_location_found"-->
    <!--android:icon="@drawable/ic_action_location_found"-->
    <!--android:showAsAction="always"-->
    <!--android:title="@string/action_location_found"/>-->

    <!-- Add New Place -->
    <item
        android:id="@+id/id_add_place"
        android:icon="@drawable/myposition"
        app:showAsAction="never"
        android:title="@string/action_new_place" />

            <!-- Refresh -->
            <item
                android:id="@+id/id_list_places"
                android:icon="@drawable/myposition"
                app:showAsAction="never"
                android:title="@string/action_search" />

            <!-- Help -->
			<!--
            <item
                android:id="@+id/idfind_us"
                android:icon="@drawable/findus"
                android:showAsAction="never"
                android:title="@string/find_us" />
            -->
			<!-- Help -->

            <!-- Help -->


            <!-- Check updates -->
            <item
                android:id="@+id/id_about_us"
                android:icon="@drawable/aboutus"
                app:showAsAction="never"
                android:title="@string/about_us" />
            <!--
			<item
                android:id="@+id/menu_item_share"
                android:actionProviderClass="android.widget.ShareActionProvider"
                android:icon="@drawable/shareit"
                android:showAsAction="ifRoom"
                android:title="Share" />
				-->

</menu>