<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f7f7f7"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" />
    <!--<fragment-->
    <!--android:id="@+id/ggmap"-->
    <!--android:name="com.google.android.gms.maps.MapFragment"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="200dp"/>-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="2dip"
        android:layout_weight="8"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="none"
            android:scrollbars="none">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView

                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="2dip"
                        android:src="@drawable/logo_lg" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dip"

                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TableRow
                            android:layout_width="0dip"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.5"
                            android:gravity="center_vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="1dip"
                                android:padding="2dip"
                                android:src="@drawable/about_us_icon" />

                            <TextView
                                android:id="@+id/cAddress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="8dip"
                                android:text="ABOUT US"
                                android:textColor="#2c3e50"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </TableRow>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="5dip">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dip"
                            android:text="@string/about_us_details"
                            android:textColor="#898a88"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dip"

                    android:orientation="vertical">



                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TableRow
                            android:layout_width="0dip"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.5"
                            android:gravity="center_vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="1dip"
                                android:padding="2dip"
                                android:src="@drawable/address" />

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="8dip"
                                android:text="@string/about_us_address"
                                android:textColor="#2c3e50"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </TableRow>
                    </LinearLayout>
<!--

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TableRow
                            android:layout_width="0dip"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.5"
                            android:gravity="center_vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="1dip"
                                android:padding="2dip"
                                android:src="@drawable/phone" />

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="8dip"
                                android:text="@string/about_us_phone"
                                android:textColor="#2c3e50"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </TableRow>
                    </LinearLayout>
					-->
					
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TableRow
                            android:layout_width="0dip"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.5"
                            android:gravity="center_vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="1dip"
                                android:padding="2dip"
                                android:src="@drawable/web_icon" />

                            <TextView

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="8dip"
                                android:text="@string/about_us_web"
                                android:textColor="#2c3e50"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </TableRow>
                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!--<com.google.android.gms.ads.AdView-->
            <!--android:id="@+id/adView"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--ads:adSize="BANNER"-->
            <!--ads:adUnitId="ca-app-pub-1183621624869118/9096660980" />-->
        </LinearLayout>
    </LinearLayout>

</LinearLayout>